--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ],
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "redux-saga": "^1.1.3"
+  }
 }
