--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "author": "Anthony Dowds <ajdowds89@gmail.com> (anthonydowds.com)",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.17.5",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rollup": "^2.46.0",
-    "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.2.4"
+    "rollup": "^2.68.0",
+    "rollup-plugin-sass": "^1.2.10",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "typescript": "^4.6.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -30,6 +29,7 @@
     "dist"
   ],
   "dependencies": {
+    "@babel/runtime": "^7.17.2",
     "@reduxjs/toolkit": "^1.5.1",
     "redux-saga": "^1.1.3"
   }
